[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gagpasta"
version = "1.2.0"
description = "Find Freshly Served 9Gag Posts, Al Dente!🍝"
authors = ["Richard Mwewa <rly0nheart@gagpasta.com>"]
readme = "README.md"
license = "GNU General Public License v3 (GPLv3)"
homepage = "https://gagpasta.com"
repository = "https://github.com/rly0nheart/gagpasta"
keywords = ["9gag-api", "9gag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3",
    "Programming Language :: Other",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
flask = { version = "^3.0.1", extras = ["async"] }
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.4"
pytest-html = "^4.1.1"

